# windows-drivers-rs

crates/cargo-wdk/templates/umdf/: lib.rs.tmp
crates/wdk-build/: Cargo.toml  build.rs
crates/wdk-build/src/: lib.rs
crates/wdk-panic/: Cargo.toml  build.rs
crates/wdk-panic/src/: lib.rs
crates/wdk-sys/: Cargo.toml
tools/driver-test-cli-v2/: ARCHITECTURE.md  Cargo.toml  driver-test-cli-v2-usage.md  test_args.ps1
tools/driver-test-cli-v2/scripts/: Capture-DbgPrintToFile.ps1  Capture-DriverLogs.ps1  Install-DriverOnVM.ps1  Manage-VMSnapshot.ps1  Verify-DriverOnVM.ps1
tools/driver-test-cli-v2/src/: capture.rs  error.rs  lib.rs  main.rs  pipeline.rs  ps_runner.rs  report.rs
tools/driver-test-cli-v2/tests/: unit_tests.rs
